6 files modified, 1 added, 1 deleted

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -33,3 +33,9 @@ input{
 /* button:hover{
   transform: scale(1.1);
 } */
+.bgyellow{
+  background-color: yellow,
+}
+.bggreen{
+  background-color: yellow,
+}
